fix for webkit misalignment in CSS columns mixin

--- a/scss/components/_css-columns.scss
+++ b/scss/components/_css-columns.scss
@@ -18,6 +18,8 @@
   column-count: $count;
 
   > * {
+    display: inline-block;
+    width: 100%;
     break-inside: avoid;
   }
 }
